--- a/docs/programming/concurrent-programming/02. Process.md
+++ b/docs/programming/concurrent-programming/02. Process.md
@@ -15,7 +15,7 @@ tags:
 
 # Process
 
-A process is a program in execution. It means it has not only a space aspect (a program) but also time aspect (in execution)
+A process is a program in execution. A process is not just a program (space aspect) but also an instance of execution (time aspect).
 
 <details open markdown="block">
   <summary>
@@ -55,7 +55,7 @@ These aspects of a process are closely related. the allocated memory of a proces
 
 ## States of a Process
 
-A process is genrally created and controlled by the OS.
+A process is generally created and controlled by the OS.
 
 ```mermaid
 graph LR
@@ -78,3 +78,100 @@ A process can create its child processes through OS system call. This creating i
 Child processes are independent forks of the main process. Each child process isolated in terms of memory address space.
 
 As operating system controls this isolation, a direct access of instructions and data among the processes is not allowed.
+
+
+## Examples of Multi-Processing
+Here are naive examples in Python and C++.
+
+### Multi-Processing in python
+In Python, by using `multiprocessing` library, we can achieve the multiprocessing.
+
+```python
+import os
+import time
+from multiprocessing import Process
+
+def run_child(cpu_waste_seconds:int) -> None:
+    time.sleep(cpu_waste_seconds)
+    curr_pid = os.getpid()
+    print(f"child ({curr_pid}) : finished job")
+
+
+def run_parent(num_children:int=3, cpu_waste_seconds:int=2) -> None:
+    curr_pid = os.getpid()
+
+    child_processes = [
+        Process(target=run_child, args=(cpu_waste_seconds,))
+        for _ in range(num_children)
+    ]
+
+    for child_process in child_processes:
+        child_process.start()
+
+    for child_process in child_processes:
+        child_process.join()
+
+    print(f"parent's ({curr_pid}) : finished job")
+
+if __name__ == "__main__":
+    num_children       : int = 3
+    child_process_time : int = 2
+    run_parent(num_children=num_children, cpu_waste_seconds=child_process_time)
+```
+
+### Multi-Processing in C++
+In C++, unlike multi-threading, there is no standard library that interfaces multi-processing, in other words, you should write multiprocessing calls that depend on the target OS.
+
+
+Here's an example of naive multi-processing in UNIX-like OS environment.
+```cpp
+#include <iostream>
+#include <chrono>
+
+//UNIX dependency (POSIX). Not compatible with Windows.
+#include <unistd.h>
+
+#include <sys/types.h>
+#include <sys/wait.h>
+#include <thread> // to use thread - sleep
+
+void SleepFor(int sleepSeconds)
+{
+    auto sleepLiteral = std::chrono::seconds(sleepSeconds);
+    std::this_thread::sleep_for(sleepLiteral);
+}
+
+void RunChild(int sleepSeconds) {
+    pid_t currPID = getpid();
+    SleepFor(sleepSeconds);
+    std::cout << "Child process PID: " << currPID << std::endl;
+}
+
+void RunParent(int numChildren = 3, int sleepSeconds = 2) {
+    pid_t currPID = getpid();
+    std::cout << "Parent process PID: " << currPID << std::endl;
+
+    for (int i = 0; i < numChildren; ++i) {
+        pid_t PID = fork();
+        
+        if (PID < 0) {
+            std::cerr << "Fork failed" << std::endl;
+        } else if (PID == 0) {
+            RunChild(sleepSeconds);
+            _exit(0); // Terminate child process
+        }
+    }
+    
+    // Parent waits for all children to finish
+    for (int i = 0; i < numChildren; ++i) {
+        waitpid(-1, nullptr, 0);
+    }
+}
+
+int main() {
+    const int numChildren  = 3;
+    const int sleepSeconds = 2;
+    RunParent(numChildren, sleepSeconds);
+    return 0;
+}
+```
