--- a/docs/programming/concurrent-programming/03. Threads.md
+++ b/docs/programming/concurrent-programming/03. Threads.md
@@ -30,7 +30,7 @@ A thread is indeed an independent sequence of instructions within a process.  It
 
 ## More specifically
 
-A thread is the smallest sequence of instructions that can be executed independently. Each thread has its own stack and registers, but it shares the same memory with other threads in the same process. This means threads in a process can access the same data, but they cannot modify each other's register data without proper synchronization.
+A thread is the smallest sequence of instructions that can be executed independently. Each thread has its own stack and registers, but it shares the same memory with other threads in the same process. This means threads in a process can access the same data, but they cannot modify each other's register value without proper synchronization.
 
 In short, each thread operates independently, unaware of the others unless explicitly designed to interact.
 
@@ -40,18 +40,74 @@ In short, each thread operates independently, unaware of the others unless expli
 
 Threads have much less memory overhead than the standard `fork()` function as the parent thread is not copied - threads use the same process.
 
-Also, By just accessing the shared address space of their parent process, all the threads in a process can communicate with the same data: any changes by a single thread is immediately available to the others.
+Also, by accessing the shared address space of their parent process, all the threads in a process can communicate with the same data: any changes by a single thread is immediately available to the others.
 
 In tasks like graphics programming (e.g., shader programming), threads are often more convenient than processes.
 
 ### Cons - developer's burden on synchronization.
 
-Unlike process, OS does not provide complete independence. This is because all threads in a process uses the same shared resources, if one crashes or corrupted, the others will be affected. Therefore, developer needs to handle with synchronization techniques.
+Unlike processes, the OS does not provide complete isolation for threads. This is because all threads in a process use the same shared resources, if one crashes or corrupted, the others will be affected. Therefore, developers must implement synchronization techniques.
 
+## Example of Multi-Threading
+Here are naive examples in Python and C++.
 
-## Naive usage in C++
+### Multi-Threading in Python
+When you use multi-threading in Python, you need to know about `Global Interpret Lock (GIL)`
 
-Here's naive implementation of threading in C++.
+> **Note - GIL**    
+> In CPython, the Global Interpreter Lock (GIL) is a mutex that ensures only one thread executes Python bytecode at a time. This design simplifies memory management and prevents race conditions, but it also means that multi-threaded Python programs may not fully utilize multi-core processors for CPU-bound tasks. However, for I/O-bound operations, threading can still be effective. (ref: realpython.com)
+
+```python
+import os
+import time
+import threading
+from threading import Thread
+
+def run_sub_thread(idx: int, sleep_time:int=2) -> None:
+    sub_thread_name = threading.current_thread().name
+    print(
+        f"{sub_thread_name} in PID({os.getpid()}) "
+        f"is doing {idx} work"
+    )
+    time.sleep(sleep_time)
+
+def display_threads() -> None:
+    print("================")
+    print(f"Active threads : {threading.active_count()}")
+    for thread_ in threading.enumerate():
+        print(thread_)
+
+def main(
+    num_threads : int = 5,
+    sleep_time  : int = 2    
+) -> None:
+    display_threads()
+
+    threads = [
+        Thread(
+            target=run_sub_thread, args=(idx, sleep_time)
+        )
+        for idx in range(num_threads)
+    ]
+    
+    for thread_ in threads:
+        thread_.start()
+
+    display_threads()
+
+    for thread_ in threads:
+        thread_.join()
+
+    display_threads() # to check only one thread is available now
+
+if "__main__" == __name__:
+    num_threads : int = 5
+    main(num_threads)
+```
+
+### Multi-Threading in C++
+
+Here's a naive implementation of threading in C++.
 
 ```cpp
 #include <iostream>
@@ -60,7 +116,7 @@ Here's naive implementation of threading in C++.
 #include <unistd.h>
 #include <string>
 #include <sys/types.h>
-// #include <mutex> <-- in the future ! // lock
+// #include <mutex> // Uncomment to synchronize output
 
 void threadJob(int idx, int sleepSeconds)
 {
@@ -90,6 +146,6 @@ int main()
 }
 ```
 
-The code above, system print call won't work properly because of absence of locks - Race condition
+The above C++ code, system print call won't work properly because of absence of locks - Race condition
 
-About this issue, we will cover later post.
+About this C++ issue and GIL of Python, we will cover later post.
