--- a/docs/programming/concurrent-programming/04. IPC-Shared-Memory.md
+++ b/docs/programming/concurrent-programming/04. IPC-Shared-Memory.md
@@ -15,3 +15,18 @@ tags:
   - Inter Process Communication
   - Shared Memory
 ---
+
+# Inter Process Communication (IPC) - Shared Memory
+
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  {: .text-delta }
+- . TOC
+{:toc}
+</details>
+
+# Python - Shared Memory
+
+# C++ - Shared Memory
