[refactor] orders, and add posts

--- a/docs/programming/concurrent-programming/01. Introduction.md
+++ b/docs/programming/concurrent-programming/01. Introduction.md
@@ -22,6 +22,7 @@ Eventhough a top-level programmer designs a program, it is always expected that 
 In this sense, we need to study this subject precisely and thoroughly with low-level approach, then capsulize this as possible for not thinking much with high-level approaches. 
 
 
+
 <details open markdown="block">
   <summary>
     Table of contents
@@ -30,6 +31,8 @@ In this sense, we need to study this subject precisely and thoroughly with low-l
 - . TOC
 {:toc}
 </details>
+
+## Race condition 
 
 
 ## Basic Terminology
