--- a/docs/programming/concurrent-programming/04. Race condition.md
+++ b/docs/programming/concurrent-programming/04. Race condition.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 04. IPC-Shared-Memory
+title: 04. Race Conditions
 parent: Concurrent Programming
 nav_order: 4
 tags: 
@@ -16,17 +16,3 @@ tags:
   - Shared Memory
 ---
 
-# Inter Process Communication (IPC) - Shared Memory
-
-<details open markdown="block">
-  <summary>
-    Table of contents
-  </summary>
-  {: .text-delta }
-- . TOC
-{:toc}
-</details>
-
-# Python - Shared Memory
-
-# C++ - Shared Memory
