--- a/docs/programming/concurrent-programming/01. Introduction.md
+++ b/docs/programming/concurrent-programming/01. Introduction.md
@@ -21,7 +21,7 @@ Eventhough a top-level programmer designs a program, it is always expected that 
 
 In this sense, we need to study this subject precisely and thoroughly with low-level approach, then capsulize this as possible for not thinking much with high-level approaches. 
 
-
+<!-- 
 
 <details open markdown="block">
   <summary>
@@ -30,14 +30,11 @@ In this sense, we need to study this subject precisely and thoroughly with low-l
   {: .text-delta }
 - . TOC
 {:toc}
-</details>
-
-## Race condition 
+</details> -->
 
 
-## Basic Terminology
+<!-- ## Basic Terminology in a Process
    
-
 
 | Term | Description |
 |---|---|
@@ -52,5 +49,5 @@ In this sense, we need to study this subject precisely and thoroughly with low-l
 | **Context switching** | The process of switching from one process to another. |
 | **Inter-process communication (IPC)** | IPC is the process of communication between processes. |
 | **register** | A small, fast memory that is used to store data that is being used by the CPU (for frequent uses)|
-| **Program counter** | A register that stores the address of the next instruction that the CPU will execute |   
+| **Program counter** | A register that stores the address of the next instruction that the CPU will execute |    -->
 
