--- a/docs/programming/concurrent-programming/02. Process.md
+++ b/docs/programming/concurrent-programming/02. Process.md
@@ -169,9 +169,9 @@ void RunParent(int numChildren = 3, int sleepSeconds = 2) {
 }
 
 int main() {
-    const int numChildren  = 3;
-    const int sleepSeconds = 2;
-    RunParent(numChildren, sleepSeconds);
+    const int NUM_CHILDREN  = 3;
+    const int SLEEP_SECONDS = 2;
+    RunParent(NUM_CHILDREN, SLEEP_SECONDS);
     return 0;
 }
 ```
