--- a/docs/programming/concurrent-programming/02. Process.md
+++ b/docs/programming/concurrent-programming/02. Process.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 02. Process
+title: 02. Processes
 parent: Concurrent Programming
 nav_order: 2
 tags: 
@@ -13,9 +13,9 @@ tags:
   - python
 ---
 
-# Process
+# Processes
 
-A process is a program in execution. A process is not just a program (space aspect) but also an instance of execution (time aspect).
+A **process** is a program in execution. A process is not just a program (space aspect) but also an instance of execution (time aspect).
 
 <details open markdown="block">
   <summary>
@@ -26,7 +26,7 @@ A process is a program in execution. A process is not just a program (space aspe
 {:toc}
 </details>
 
-## More specifically
+## More on Processes
 
 A process's space is the allocated memory. This memory includes the code of the program, the data using for the program, and the stack. Here, the stack is used to store the state of the process, such as the values of the registers and the program counter
 
@@ -34,9 +34,9 @@ A process's space is the allocated memory. This memory includes the code of the 
 In terms of time aspect, the time includes the process **waiting** time for its running, process **running** time, and its **waiting I/O** time.
 
 
-These aspects of a process are closely related. the allocated memory of a process determines how long the process can run. vice versa.
+These aspects of a process are closely related. The allocated memory of a process influences its execution time, and vice versa.
 
-## What are in a Process
+## What is in a Process
 
 1. Process ID (PID)
 2. Process State
@@ -67,9 +67,9 @@ graph LR
     Running --> Terminated;
 ```
 
-## Multiple Processes
+## How Multiple Processes Work?
 
-A process can create its child processes through OS system call. This creating is called spawning.
+A process can create child processes through OS system calls, this is known as spawning.
 
 - fork() (Unix-like): Creates a new process that is a copy of the parent process. The child process gets its own copy of the parent's address space (initially).
 
@@ -175,3 +175,11 @@ int main() {
     return 0;
 }
 ```
+
+## Conclusion
+
+Processes are fundamental to concurrent programming, providing independent execution environments that enable efficient multitasking. Processes do not share memory directly, ensuring greater isolation and stability but at the cost of increased communication overhead.
+
+Multi-processing allows programs to leverage multiple CPU cores, making it ideal for CPU-bound tasks. However, inter-process communication (IPC, which will be discussed in the future) mechanisms such as pipes, shared memory, and message queues are required for data exchange between processes.
+
+While Python's multiprocessing module provides a high-level abstraction for spawning and managing processes, C++ requires explicit system calls like fork() (Unix) or spawn() (Windows). Each approach comes with its own trade-offs in terms of portability, efficiency, and complexity.
