--- a/docs/programming/concurrent-programming/03. Threads.md
+++ b/docs/programming/concurrent-programming/03. Threads.md
@@ -14,10 +14,9 @@ tags:
 ---
 
 
-# Thread
+# Threads
 
-A thread is indeed an independent sequence of instructions within a process.  It's the smallest unit of execution that can be scheduled by the OS.
-
+A **thread** is an independent sequence of instructions within a process. It is the smallest unit of execution that the operating system (OS) can schedule. Multiple threads within a process share the same memory space but execute independently.
 
 <details open markdown="block">
   <summary>
@@ -28,7 +27,7 @@ A thread is indeed an independent sequence of instructions within a process.  It
 {:toc}
 </details>
 
-## More specifically
+## More on Threads
 
 A thread is the smallest sequence of instructions that can be executed independently. Each thread has its own stack and registers, but it shares the same memory with other threads in the same process. This means threads in a process can access the same data, but they cannot modify each other's register value without proper synchronization.
 
@@ -38,24 +37,32 @@ In short, each thread operates independently, unaware of the others unless expli
 
 ### Pros - memory / communication overhead
 
-Threads have much less memory overhead than the standard `fork()` function as the parent thread is not copied - threads use the same process.
+- Efficient Memory Usage: Threads require significantly less memory overhead compared to creating new processes with fork(), as threads share the same memory space.
 
-Also, by accessing the shared address space of their parent process, all the threads in a process can communicate with the same data: any changes by a single thread is immediately available to the others.
 
-In tasks like graphics programming (e.g., shader programming), threads are often more convenient than processes.
+- Fast Communication: Since threads within the same process share memory, they can exchange data efficiently without requiring inter-process communication mechanisms.
+
+- Use Case: Multi-threading is particularly useful in high-performance applications such as graphics rendering (e.g., shader programming) and parallel computations.
+
 
 ### Cons - developer's burden on synchronization.
 
-Unlike processes, the OS does not provide complete isolation for threads. This is because all threads in a process use the same shared resources, if one crashes or corrupted, the others will be affected. Therefore, developers must implement synchronization techniques.
+- Lack of Isolation: Unlike processes, threads do not have full isolation. If one thread crashes or corrupts shared data, it can affect all threads within the process.
+
+- Developer’s Responsibility: Ensuring data consistency requires explicit synchronization mechanisms (e.g., mutexes, semaphores, or atomic operations). Improper synchronization can lead to race conditions, deadlocks, and performance bottlenecks.
 
 ## Example of Multi-Threading
-Here are naive examples in Python and C++.
+Below are basic implementations of multi-threading in Python and C++.
+
 
 ### Multi-Threading in Python
-When you use multi-threading in Python, you need to know about `Global Interpret Lock (GIL)`
+Python's Global Interpreter Lock (GIL) prevents true parallel execution for CPU-bound tasks but still allows efficient multi-threading for I/O-bound operations.
+
 
 > **Note - GIL**    
 > In CPython, the Global Interpreter Lock (GIL) is a mutex that ensures only one thread executes Python bytecode at a time. This design simplifies memory management and prevents race conditions, but it also means that multi-threaded Python programs may not fully utilize multi-core processors for CPU-bound tasks. However, for I/O-bound operations, threading can still be effective. (ref: realpython.com)
+
+**Python Multi-Threading Example**
 
 ```python
 import os
@@ -107,8 +114,9 @@ if "__main__" == __name__:
 
 ### Multi-Threading in C++
 
-Here's a naive implementation of threading in C++.
+C++ provides robust multi-threading support, we must take care of managing synchronization effectively.
 
+**Basic C++ Multi-Threading Example**
 ```cpp
 #include <iostream>
 #include <chrono>
@@ -116,18 +124,21 @@ Here's a naive implementation of threading in C++.
 #include <unistd.h>
 #include <string>
 #include <sys/types.h>
-// #include <mutex> // Uncomment to synchronize output
 
-void threadJob(int idx, int sleepSeconds)
+#include "Timer.h"
+
+void ExecuteThread(int idx, int sleepSeconds)
 {
     pid_t threadPID = getpid();
     std::thread::id threadID = std::this_thread::get_id();
-    std::cout << threadID << " in PID (" << threadPID << ")" << "\n";
+    std::cout << "Thread - "<< idx << " ("<< threadID << ") in PID (" << threadPID << ")" << "\n";
     std::this_thread::sleep_for(std::chrono::seconds(sleepSeconds));
 }
 
 int main()
 {
+    Timer timer;
+
     const int NUM_THREAD = 5;
     const int SLEEP_SECONDS = 2;
 
@@ -135,7 +146,7 @@ int main()
 
     for (int i=0; i < NUM_THREAD; i++)
     {
-        threads[i] = std::thread(threadJob, i, SLEEP_SECONDS);
+        threads[i] = std::thread(ExecuteThread, i, SLEEP_SECONDS);
     }
 
     for ( int i=0; i < NUM_THREAD; i++)
@@ -146,6 +157,110 @@ int main()
 }
 ```
 
-The above C++ code, system print call won't work properly because of absence of locks - Race condition
+Then the output would be:
 
-About this C++ issue and GIL of Python, we will cover later post.
+```bash
+Thread - 0 (Thread - 0x16d2a7000) in PID (91237)
+Thread - Thread - 4 (0x16d4d7000) in PID (91237)
+3 (0x16d44b000) in PID (91237)
+1 (0x16d333000) in PID (91237)
+Thread - 2 (0x16d3bf000) in PID (91237)
+Process Ended in 2.00527 [s].
+```
+
+The output of the above code might be scrambled, demonstrating a race condition.  Because std::cout is a shared resource, multiple threads trying to write to it simultaneously can interleave their output.  This is a classic example of why proper synchronization is essential.
+
+To solve this, I put the following print class represented as  `ThreadSafePrinter` class using the concept of `mutex` (mutual exclusion, we will discuss in the future).
+
+**Thread-Safe Printing Utility**
+```cpp
+// ThreadSafeUtils.h
+#pragma once
+#include <mutex>
+#include <string>
+
+class ThreadSafePrinter
+{
+public:
+    void Print(const std::string& str);
+private:
+    std::mutex m_Mutex;
+};
+```
+```cpp
+// ThreadSafeUtils.cpp
+#include <iostream>
+#include "ThreadSafeUtils.h"
+
+void ThreadSafePrinter::Print(const std::string& str)
+{
+    std::lock_guard<std::mutex> lock(m_Mutex);
+    std::cout << str ;
+}
+```
+**Updated Multi-Threading Code with Thread-Safe Printing**
+```cpp
+#include <chrono>
+#include <iostream>
+#include <mutex>
+#include <string>
+#include <sstream>
+#include <thread>
+
+#include <unistd.h>
+#include <sys/types.h>
+
+#include "Timer.h"
+#include "ThreadSafeUtils.h"
+
+void ExecuteThread(int idx, int sleepSeconds, ThreadSafePrinter& printer)
+{
+    pid_t threadPID = getpid();
+    std::thread::id threadID = std::this_thread::get_id();
+
+    std::ostringstream ss;
+    ss << "Thread - "<< idx << " ("<< threadID << ") in PID (" << threadPID << ")" << "\n";
+
+    printer.Print(ss.str());
+
+    std::this_thread::sleep_for(std::chrono::seconds(sleepSeconds));
+}
+
+int main()
+{
+    Timer timer;
+    ThreadSafePrinter safePrinter;
+
+    const int NUM_THREAD = 5;
+    const int SLEEP_SECONDS = 2;
+
+    std::thread threads[NUM_THREAD];
+
+    for (int i=0; i < NUM_THREAD; i++)
+    {
+        threads[i] = std::thread(ExecuteThread, i, SLEEP_SECONDS, std::ref(safePrinter));
+    }
+
+    for ( int i=0; i < NUM_THREAD; i++)
+    {
+        threads[i].join();
+    }
+
+}
+```
+Then the expected output will be looked like as follows:
+
+```bash
+Thread - 0 (0x16bb77000) in PID (92800)
+Thread - 3 (0x16bd1b000) in PID (92800)
+Thread - 4 (0x16bda7000) in PID (92800)
+Thread - 1 (0x16bc03000) in PID (92800)
+Thread - 2 (0x16bc8f000) in PID (92800)
+Process Ended in 2.00515 [s].
+```
+
+This updated version ensures synchronized output using a mutex, preventing race conditions in multi-threaded environments.
+
+## Conclusion
+
+Multi-threading is powerful, but it comes with challenges like synchronization. Python and C++ handle threads differently, but both require careful management to avoid race conditions and performance issues.
