--- a/docs/programming/concurrent-programming/01. Introduction.md
+++ b/docs/programming/concurrent-programming/01. Introduction.md
@@ -5,8 +5,10 @@ parent: Concurrent Programming
 nav_order: 1
 tags: 
   - concurrent programming
-  - multi-threading
-  - multi-processing
+  - multi-tasking
+  - multithreading
+  - multiprocessing
+  - synchronization
   - asynchronous programming
   - C++
   - C
@@ -17,37 +19,6 @@ tags:
 
 Multi-threading, parallel computing, concurrent programming are powerful but quite difficult. 
 
-Eventhough a top-level programmer designs a program, it is always expected that his/her first approach is a `single threaded` program.    
+Eventhough a top-level programmer designs a program, it is always expected that his/her first approach is a `single threaded` or `sequential` program.    
 
 In this sense, we need to study this subject precisely and thoroughly with low-level approach, then capsulize this as possible for not thinking much with high-level approaches. 
-
-<!-- 
-
-<details open markdown="block">
-  <summary>
-    Table of contents
-  </summary>
-  {: .text-delta }
-- . TOC
-{:toc}
-</details> -->
-
-
-<!-- ## Basic Terminology in a Process
-   
-
-| Term | Description |
-|---|---|
-| **Process** | A program in execution. It is an instance of a program that is running on a computer. |
-| **Thread** | A lightweight process. It is a sequence of instructions that can be executed independently of other threads. |
-| **Process ID (PID)** | A unique identifier that is assigned to each process. It is used to identify the process and to distinguish it from other processes. |
-| **Thread ID (TID)** | A unique identifier that is assigned to each thread. It is used to identify the thread and to distinguish it from other threads. |
-| **Parent process** | A process that creates another process. The created process is called the child process. |
-| **Child process** | A process that is created by another process. The creating process is called the parent process. |
-| **Kernel** | The core of the operating system. It is responsible for managing processes and other resources. |
-| **Scheduler** | The scheduler is responsible for scheduling processes to run on the CPU. |
-| **Context switching** | The process of switching from one process to another. |
-| **Inter-process communication (IPC)** | IPC is the process of communication between processes. |
-| **register** | A small, fast memory that is used to store data that is being used by the CPU (for frequent uses)|
-| **Program counter** | A register that stores the address of the next instruction that the CPU will execute |    -->
-
