--- a/docs/programming/concurrent-programming/03. Multiprocessing.md
+++ b/docs/programming/concurrent-programming/03. Multiprocessing.md
@@ -1,19 +1,20 @@
 ---
 layout: default
-title: 02. Processes
+title: 03. Multiprocessing
 parent: Concurrent Programming
-nav_order: 2
 tags: 
   - concurrent programming
-  - multi-threading
-  - multi-processing
+  - multiprocessing
+  - synchronization
   - asynchronous programming
   - C++
   - C
   - python
 ---
 
-# Processes
+# Multiprocessing
+
+Multiprocessing is technique of executing multiple processes concurrently.  
 
 A **process** is a program in execution. A process is not just a program (space aspect) but also an instance of execution (time aspect).
 
@@ -80,10 +81,10 @@ Child processes are independent forks of the main process. Each child process is
 As operating system controls this isolation, a direct access of instructions and data among the processes is not allowed.
 
 
-## Examples of Multi-Processing
+## Examples of Multiprocessing
 Here are naive examples in Python and C++.
 
-### Multi-Processing in python
+### Multiprocessing in python
 In Python, by using `multiprocessing` library, we can achieve the multiprocessing.
 
 ```python
@@ -119,11 +120,11 @@ if __name__ == "__main__":
     run_parent(num_children=num_children, cpu_waste_seconds=child_process_time)
 ```
 
-### Multi-Processing in C++
-In C++, unlike multi-threading, there is no standard library that interfaces multi-processing, in other words, you should write multiprocessing calls that depend on the target OS.
+### Multiprocessing in C++
+In C++, unlike multithreading, there is no standard library that interfaces multiprocessing, in other words, you should write multiprocessing calls that depend on the target OS.
 
 
-Here's an example of naive multi-processing in UNIX-like OS environment.
+Here's an example of naive multiprocessing in UNIX-like OS environment.
 ```cpp
 #include <iostream>
 #include <chrono>
@@ -180,6 +181,6 @@ int main() {
 
 Processes are fundamental to concurrent programming, providing independent execution environments that enable efficient multitasking. Processes do not share memory directly, ensuring greater isolation and stability but at the cost of increased communication overhead.
 
-Multi-processing allows programs to leverage multiple CPU cores, making it ideal for CPU-bound tasks. However, inter-process communication (IPC, which will be discussed in the future) mechanisms such as pipes, shared memory, and message queues are required for data exchange between processes.
+Multiprocessing allows programs to leverage multiple CPU cores, making it ideal for CPU-bound tasks. However, inter-process communication (IPC, which will be discussed in the future) mechanisms such as pipes, shared memory, and message queues are required for data exchange between processes.
 
 While Python's multiprocessing module provides a high-level abstraction for spawning and managing processes, C++ requires explicit system calls like fork() (Unix) or spawn() (Windows). Each approach comes with its own trade-offs in terms of portability, efficiency, and complexity.
