--- a/docs/programming/concurrent-programming/04. Multithreading.md
+++ b/docs/programming/concurrent-programming/04. Multithreading.md
@@ -1,12 +1,11 @@
 ---
 layout: default
-title: 03. Threads
+title: 04. Multithreading
 parent: Concurrent Programming
-nav_order: 2
 tags: 
   - concurrent programming
-  - multi-threading
-  - multi-processing
+  - multithreading
+  - synchronization
   - asynchronous programming
   - C++
   - C
@@ -14,7 +13,9 @@ tags:
 ---
 
 
-# Threads
+# Multithreading
+
+Multithreading is technique of executing multiple threads concurrently.  
 
 A **thread** is an independent sequence of instructions within a process. It is the smallest unit of execution that the operating system (OS) can schedule. Multiple threads within a process share the same memory space but execute independently.
 
@@ -42,7 +43,7 @@ In short, each thread operates independently, unaware of the others unless expli
 
 - Fast Communication: Since threads within the same process share memory, they can exchange data efficiently without requiring inter-process communication mechanisms.
 
-- Use Case: Multi-threading is particularly useful in high-performance applications such as graphics rendering (e.g., shader programming) and parallel computations.
+- Use Case: Multithreading is particularly useful in high-performance applications such as graphics rendering (e.g., shader programming) and parallel computations.
 
 
 ### Cons - developer's burden on synchronization.
@@ -51,18 +52,18 @@ In short, each thread operates independently, unaware of the others unless expli
 
 - Developer’s Responsibility: Ensuring data consistency requires explicit synchronization mechanisms (e.g., mutexes, semaphores, or atomic operations). Improper synchronization can lead to race conditions, deadlocks, and performance bottlenecks.
 
-## Example of Multi-Threading
-Below are basic implementations of multi-threading in Python and C++.
+## Example of Multithreading
+Below are basic implementations of multithreading in Python and C++.
 
 
-### Multi-Threading in Python
-Python's Global Interpreter Lock (GIL) prevents true parallel execution for CPU-bound tasks but still allows efficient multi-threading for I/O-bound operations.
+### Multithreading in Python
+Python's Global Interpreter Lock (GIL) prevents true parallel execution for CPU-bound tasks but still allows efficient multithreading for I/O-bound operations.
 
 
 > **Note - GIL**    
 > In CPython, the Global Interpreter Lock (GIL) is a mutex that ensures only one thread executes Python bytecode at a time. This design simplifies memory management and prevents race conditions, but it also means that multi-threaded Python programs may not fully utilize multi-core processors for CPU-bound tasks. However, for I/O-bound operations, threading can still be effective. (ref: realpython.com)
 
-**Python Multi-Threading Example**
+**Python MultiThreading Example**
 
 ```python
 import os
@@ -112,11 +113,11 @@ if "__main__" == __name__:
     main(num_threads)
 ```
 
-### Multi-Threading in C++
+### MultiThreading in C++
 
-C++ provides robust multi-threading support, we must take care of managing synchronization effectively.
+C++ provides robust multithreading support, we must take care of managing synchronization effectively.
 
-**Basic C++ Multi-Threading Example**
+**Basic C++ MultiThreading Example**
 ```cpp
 #include <iostream>
 #include <chrono>
@@ -168,7 +169,11 @@ Thread - 2 (0x16d3bf000) in PID (91237)
 Process Ended in 2.00527 [s].
 ```
 
-The output of the above code might be scrambled, demonstrating a race condition.  Because std::cout is a shared resource, multiple threads trying to write to it simultaneously can interleave their output.  This is a classic example of why proper synchronization is essential.
+The output of the above code might be scrambled, demonstrating a **race condition**.  Because std::cout is a shared resource, multiple threads trying to write to it simultaneously can interleave their output.  This is a classic example of why proper synchronization is essential.
+
+> **Note - Race condition**   
+> A race condition occurs in concurrent programming when the behavior of a program depends on the relative timing of events, such as the order in which threads or processes are scheduled to run. This can lead to unpredictable and erroneous results because the outcome depends on the interleaving of operations performed by multiple threads or processes.
+
 
 To solve this, I put the following print class represented as  `ThreadSafePrinter` class using the concept of `mutex` (mutual exclusion, we will discuss in the future).
 
@@ -198,7 +203,7 @@ void ThreadSafePrinter::Print(const std::string& str)
     std::cout << str ;
 }
 ```
-**Updated Multi-Threading Code with Thread-Safe Printing**
+**Updated Multithreading Code with Thread-Safe Printing**
 ```cpp
 #include <chrono>
 #include <iostream>
@@ -263,4 +268,4 @@ This updated version ensures synchronized output using a mutex, preventing race 
 
 ## Conclusion
 
-Multi-threading is powerful, but it comes with challenges like synchronization. Python and C++ handle threads differently, but both require careful management to avoid race conditions and performance issues.
+Multithreading is powerful, but it comes with challenges like synchronization. Python and C++ handle threads differently, but both require careful management to avoid race conditions and performance issues.
