--- a/docs/programming/concurrent-programming/05. IPC.md
+++ b/docs/programming/concurrent-programming/05. IPC.md
@@ -1,17 +1,29 @@
-<!-- ---
+---
 layout: default
-title: 05. IPC-Pipe
+title: 05. Inter-Process Communication (IPC)
 parent: Concurrent Programming
-nav_order: 5
 tags: 
   - concurrent programming
-  - multi-threading
-  - multi-processing
+  - multithreading
+  - multiprocessing
+  - synchronization
   - asynchronous programming
   - C++
   - C
   - python
   - IPC
-  - Inter Process Communication
-  - Pipe
---- -->
+  - Inter-Process Communication
+---
+
+# IPC (Inter-Process Communication)
+In concurrent programming, multiple processes or threads (we simply gonna say those two be tasks) often need to communicate to coordinate works, share data, or manage resources. This communication is known as Inter-Process Communication (IPC). Even when tasks do not explicitly exchange messages, they still interact implicitly by competing for shared resources.
+
+The choice of IPC mechanism depends on whether you're working with multithreading (shared memory within a single process) or multiprocessing (separate memory spaces). While "IPC" technically refers to communication between processes, we'll also consider communication between threads under the same umbrella.
+
+## Types of IPC
+
+IPC mechanisms can be broadly classified into two categories:
+
+Message-Passing IPC – Tasks communicate by sending and receiving messages. This method provides more isolation but may involve more overhead compared to shared memory.
+
+Shared-Memory IPC – Tasks share a common memory space to exchange data. (This approach requires synchronization techniques to prevent race conditions.)
